src/objects/Incident__c.object
<CustomObject>
    <description>Used to support data collections around incidents or events.</description>
    <fields>
        <fullName>FacilityOrSchoolName__c</fullName>
        <description>Name of the School or facility.Against this object all Incidents,Assessment checklist,t\Tornado and fire drill form instances will be stored.</description>
        <inlineHelpText>Name of the School or facility.Against this object all Incidents,Assessment checklist,t\Tornado and fire drill form instances will be stored.</inlineHelpText>
        <label>Facility/School Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Incident</relationshipLabel>
        <relationshipName>Incident</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Facility_Name__c</fullName>
        <label>Facility Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Facility_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative Building</fullName>
                </value>
                <value>
                    <fullName>ALDIE ELEMENTARY</fullName>
                </value>
                <value>
                    <fullName>BELMONT RIDGE MIDDLE</fullName>
                </value>
                <value>
                    <fullName>BRIAR WOODS HIGH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facility_Type__c</fullName>
        <inlineHelpText>Top level Facility whether its a school or an administrative building</inlineHelpText>
        <label>Facility Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Elementary School</fullName>
                </value>
                <value>
                    <fullName>Middle School</fullName>
                </value>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IncidentDescription__c</fullName>
        <description>DESCRIBE IN DETAIL WHAT OCCURED.State WHO, WHAT, WHERE, HOW, WHEN. Provide details of monetary losses, weapons, eyewitness accounts, etc.</description>
        <inlineHelpText>DESCRIBE IN DETAIL WHAT OCCURED.State WHO, WHAT, WHERE, HOW, WHEN. Provide details of monetary losses, weapons, eyewitness accounts, etc.</inlineHelpText>
        <label>Incident Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incident_Classification__c</fullName>
        <label>Incident Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alarm</fullName>
                </value>
                <value>
                    <fullName>Bullying</fullName>
                </value>
                <value>
                    <fullName>Drug/Alcohol Offenses</fullName>
                </value>
                <value>
                    <fullName>Involving People</fullName>
                </value>
                <value>
                    <fullName>Involving Property</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Security Threats</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incident_List__c</fullName>
        <inlineHelpText>List of all incidents type on a incident.Please manually add new incidents on separate line in the format Incident Classification:Incident Type</inlineHelpText>
        <label>Incident List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incident_Location__c</fullName>
        <label>Incident Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bus</fullName>
                </value>
                <value>
                    <fullName>Classrooms</fullName>
                </value>
                <value>
                    <fullName>Field Trips</fullName>
                </value>
                <value>
                    <fullName>Hallways</fullName>
                </value>
                <value>
                    <fullName>Locker rooms</fullName>
                </value>
                <value>
                    <fullName>Parking Lots</fullName>
                </value>
                <value>
                    <fullName>Play areas</fullName>
                </value>
                <value>
                    <fullName>Restrooms</fullName>
                </value>
                <value>
                    <fullName>Cafeteria</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incident_Time__c</fullName>
        <label>Incident Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>After school</fullName>
                </value>
                <value>
                    <fullName>Before school</fullName>
                </value>
                <value>
                    <fullName>Change of class</fullName>
                </value>
                <value>
                    <fullName>During class</fullName>
                </value>
                <value>
                    <fullName>During school</fullName>
                </value>
                <value>
                    <fullName>Weekends</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incident_Type__c</fullName>
        <label>Incident Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Incident_Classification__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Assault(Minor)</fullName>
                </value>
                <value>
                    <fullName>Assault with weapon</fullName>
                </value>
                <value>
                    <fullName>Fight</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Robbery</fullName>
                </value>
                <value>
                    <fullName>Sex Offense</fullName>
                </value>
                <value>
                    <fullName>Suspicious People</fullName>
                </value>
                <value>
                    <fullName>Suspicious Incident</fullName>
                </value>
                <value>
                    <fullName>Suspicious Package</fullName>
                </value>
                <value>
                    <fullName>Suspicious Vehicles</fullName>
                </value>
                <value>
                    <fullName>Phone Threat</fullName>
                </value>
                <value>
                    <fullName>Cyber Threat</fullName>
                </value>
                <value>
                    <fullName>Fire</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Physical</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>Cyber</fullName>
                </value>
                <value>
                    <fullName>Burglary</fullName>
                </value>
                <value>
                    <fullName>Vandalism</fullName>
                </value>
                <value>
                    <fullName>Graffiti</fullName>
                </value>
                <value>
                    <fullName>Arson</fullName>
                </value>
                <value>
                    <fullName>Larceny (over $200)</fullName>
                </value>
                <value>
                    <fullName>Larceny (under $200)</fullName>
                </value>
                <value>
                    <fullName>Alarms</fullName>
                </value>
                <value>
                    <fullName>Panic</fullName>
                </value>
                <value>
                    <fullName>Verbal Threat</fullName>
                </value>
                <value>
                    <fullName>Possession</fullName>
                </value>
                <value>
                    <fullName>Use</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notifications__c</fullName>
        <label>Notifications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrator</fullName>
                </value>
                <value>
                    <fullName>Public Information Officer</fullName>
                </value>
                <value>
                    <fullName>Safety and Security</fullName>
                </value>
                <value>
                    <fullName>Superintendent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participants_List__c</fullName>
        <label>Participants List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Incident</label>
    <nameField>
        <label>Incident Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incident</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>